--- a/Makefile.Weaver
+++ b/Makefile.Weaver
@@ -1,4 +1,4 @@
-WEAVER_CONTAINER=otel/weaver@sha256:0466739a9c9bba8273ef5767ed2b417b82ef652d4e5fd3498185c714fa809460
+WEAVER_CONTAINER=otel/weaver:v0.17.1
 
 # Next - we want to run docker as our local file user, so generated code is not
 # owned by root, and we don't give unecessary access.
@@ -34,3 +34,14 @@ generate-metadata:
 		metadata \
 		--future \
 		/home/weaver/target
+
+.PHONY: validate
+validate:
+	$(DOCKER_RUN) --rm \
+		$(DOCKER_USER_IS_HOST_USER_ARG) \
+		--mount 'type=bind,source=$(PWD)/model,target=/home/weaver/model,readonly' \
+		--mount 'type=bind,source=$(PWD)/templates,target=/home/weaver/templates,readonly' \
+		--mount 'type=bind,source=$(PWD)/,target=/home/weaver/target' \
+		${WEAVER_CONTAINER} registry check \
+		--registry=/home/weaver/model \
+		--future
